--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ a{
 		/* container for the main table and message line below */
 		#main_container #right{
 			/* padding-left:auto; */ /* doesn't do much? */
-			padding-right:0px;
+			padding-right: 0px;
 			/* width: 675px; */
 			/* float: left; */
 			/* padding-right: 0px; */
@@ -41,7 +41,7 @@ a{
 	text-align: center;
 	font-size: 10pt; /* needed for cloned object */
 	opacity: 0.9; /* was 0.7 */
-	filter: alpha(opacity=70); /* was 70 */
+	/* filter: alpha(opacity=70);  was 70 */
 	/* without width, IE6/7 will not apply filter/opacity to the element ?! */
 	/* IE needs element layout */
 	width: 63px;	/* was 87px, then 75px, then 69px */
@@ -113,9 +113,9 @@ div#drag input {
 	/* height for input text in DIV element */
 	div#drag #bl input {
 		height: 15px; /* was 13px */
-		float:middle; /* 7/27/14 */
-		display:table-cell;
-		vertical-align:middle;
+		/* float: middle;  7/27/14 */
+		display: table-cell;
+		vertical-align: middle;
 	}
 
 	/* height for dropdown menu in DIV element */
@@ -126,29 +126,24 @@ div#drag input {
 			
 /* descriptor DIV colors */
 .bl {
-/*	background-color: #AAC8E2;*/
 	background-color: lightgreen;
 }
 .i {
-/* 	background-color: #E7D783; */
 	background-color: #89B3FB;
 }
 .io {
-	/* background-color: #E99AE6; */
 	background-color: #a69ed5;
 }
 .o {
-	/* background-color: #C4AFFF; */
 	background-color: #c488ae;
 }
 .os {
-	/* background-color: #91DEC5; */
 	background-color: #e17288;
 }
 .s {
-	/* background-color: #CFE17F; */
 	background-color: #fe5d62;
 }
+
 /* blank cells (upper left corner) */
 .blank {
 	background-color: white;
@@ -157,18 +152,10 @@ div#drag input {
 /* trash cell */
 /* .trash {
 	color: white;
-	text-transform:uppercase; /* 7/27/14 */
-	font-weight:bold; /* 7/27/14 */
+	text-transform:uppercase; 
+	font-weight:bold; 
 	background-color: #6386BD;
 } */
-
-/* message line */
-#message{
-	color: navy;
-	background-color: #white;
-	text-align: left;
-	margin-top: 350px; /* was 10px */
-}
 
 /* preview pane */
 #preview{
@@ -207,7 +194,6 @@ div#drag input {
 /* ===== */
 
 #report_textarea{
-	text-align: justified;
 	width: 50em;
 	height: 17em;
 	margin-bottom: 4px;
