--- a/css/style.css
+++ b/css/style.css
@@ -208,3 +208,12 @@ div.editable {
 	margin-left:10px;
 	color: black;
 }
+
+label {
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
