changing colors to be slightly higher contrast when converted to grayscale

--- a/css/style.css
+++ b/css/style.css
@@ -129,19 +129,19 @@ div#drag input {
 	background-color: lightgreen;
 }
 .i {
-	background-color: #89B3FB;
+	background-color: #A3C4FD;
 }
 .io {
-	background-color: #a69ed5;
+	background-color: #B0A9D6;
 }
 .o {
 	background-color: #c488ae;
 }
 .os {
-	background-color: #e17288;
+	background-color: #E26780;
 }
 .s {
-	background-color: #fe5d62;
+	background-color: #FF454B;
 }
 
 /* blank cells (upper left corner) */
