--- a/css/style.css
+++ b/css/style.css
@@ -172,7 +172,7 @@ div#drag input {
 	background-color: #e0e0e0;
 }
 
-#report_textarea {
+#reportTextarea {
 	width: 70em;
 	height: 17em;
 	margin-bottom: 4px;
