save text that is added to the end of the report closes #43

--- a/css/style.css
+++ b/css/style.css
@@ -176,7 +176,7 @@ div#drag input {
 	background-color: #e0e0e0;
 }
 
-#reportTextarea {
+#textareaReport {
 	width: 70em;
 	height: 17em;
 	margin-bottom: 4px;
